Fixed overlapping project page image with navbar

--- a/src/Styles/ProjectPageStyle.css
+++ b/src/Styles/ProjectPageStyle.css
@@ -18,7 +18,7 @@
 
 .ProjectPageImage
 {
-    margin-top: 1%;
+    margin-top: 5%;
     margin-bottom: 1%;
     width: 75%;
     border-style: solid;
